# labman

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  diesel.toml
.github/workflows/: ci.yaml
docs/server/: database.md
server/: Cargo.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20250601_160430_create_user.rs
server/migrations/2025-05-29-120213_create_users/: up.sql
server/src/: cli.rs  core.rs  lib.rs  main.rs  models.rs  schema.rs  user.rs  web.rs
server/src/core/: mod.rs  models.rs  user.rs
server/src/core/entity/: user.rs
server/src/web/: api.rs  app.rs  mod.rs
server/src/web/api/: mod.rs
server/src/web/api/v1/: users.rs
server/tests/: user_manager_tests.rs
server/tests/testing/: mod.rs
