[package]
name = "labman-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.39", features = ["derive"] }
deadpool-diesel = { version = "0.6.1", features = ["serde", "sqlite"] }
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel-derive-enum = "2.1.0"
diesel_migrations = "2.2.0"
dotenvy = "0.15"
serde = "1.0.219"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.45.1", features = ["full"] }
